# vulkan-perf-playground

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  vulkan_project_guide.md
android/: .gitignore  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
shaders/: shader.frag  shader.vert
src/: main.cpp  vulkan_app.cpp  vulkan_app.hpp
